# linux101

./: README.md  pyproject.toml
docs/: gnulinux101.pptx
signals/: socat  tcpclient.py  tcpserver.py  tcpserver2.py
