[tool.poetry]
name = "linux101"
version = "0.1.0"
description = "Course about Linux"
authors = ["Xavier Petit <nuxion@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
isort = "^5.6.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
